Update build script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Hyperion compiler",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
   },
   "repository": {
     "type": "git",
