--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hyperion compiler",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
